--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,23 +1,24 @@
+@import 'layout/main.scss';
 @import 'components/search.scss';
 
-html, body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  display: flex;
-}
+// html, body {
+//   width: 100%;
+//   height: 100%;
+//   margin: 0;
+//   padding: 0;
+//   display: flex;
+// }
 
-#sidebar {
-  margin: 0;
-  padding: 20px;
-}
+// #sidebar {
+//   margin: 0;
+//   padding: 20px;
+// }
 
-#map {
-  height: 100%;
-  flex: 1 0 auto;
-}
+// #map {
+//   height: 100%;
+//   flex: 1 0 auto;
+// }
 
-.list-item {
-  cursor: pointer;
-}
+// .list-item {
+//   cursor: pointer;
+// }
