--- a/src/styles/components/search.scss
+++ b/src/styles/components/search.scss
@@ -1,8 +1,11 @@
 .search-bar {
   display: flex;
+  width: 100%;
 }
 
 .search-bar input {
+  width: 100%;
+  padding-left: 15px;
   border: 0;
   border-radius: 4px 0 0 4px;
   box-shadow: 2px 2px 4px rgba(36, 36, 36, 0.363);
