--- a/src/styles/components/story-card.scss
+++ b/src/styles/components/story-card.scss
@@ -1,3 +1,17 @@
 .story {
   width: 100%;
 }
+
+.story--onerror {
+  padding: 20px;
+  background-color: #21D4FD;
+  background-image: linear-gradient(19deg, rgb(97, 26, 211) 0%, #B721FF 100%);
+  color: #ffffff;
+  border-radius: 4px;
+  text-align: center;
+
+  span {
+    font-weight: bold;
+    font-size: 1.2em;
+  }
+}
