--- a/src/styles/components/content-list.scss
+++ b/src/styles/components/content-list.scss
@@ -1,6 +1,8 @@
 .content-list {
   background-color: #fff;
   padding: 0;
+  margin-top: 16px;
+  margin-bottom: 0;
   width: 100%;
   border-radius: 4px;
   box-shadow: 2px 2px 4px rgba(36, 36, 36, 0.363);
